[package]
publish = false
name = "reco-obs"
version = "0.5.3-beta.1"
edition.workspace = true
rust-version.workspace = true
description = "OBS Studio source plugin for Reco panoramic video stitching"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
profiling = ["reco-core/profiling"]
# Enables the M6.5 replay-recording UI (two OBS properties: toggle +
# output path). Pulls in reco-io for the stacked-video encoder.
# Opt-in so builds that don't want the replay path keep a smaller
# plugin `.so` footprint.
replay = ["dep:reco-io"]

[dependencies]
reco-core = { path = "../reco-core" }
reco-control = { path = "../reco-control" }
reco-io = { path = "../reco-io", features = ["stacked-output"], optional = true }
# M2 tracing migration: tracing-subscriber replaces env_logger.
# tracing-log bridges legacy `log::*` calls. Critical for the OBS
# plugin: post-deployment we rely on log files for bug diagnosis, and
# structured tracing events give per-frame context that plain log lines
# can't (spans for video_tick, camera ID attributes, etc.).
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

[build-dependencies]
# Generates FFI bindings from the installed libobs headers at build time.
# Replaces ~600 lines of hand-written, drift-prone struct layouts in
# src/ffi.rs. In particular this fixes the `obs_source_frame::refs`
# size mismatch (Rust AtomicI32 = 4 bytes vs C `volatile long` = 8 bytes
# on LP64). See deep-review-2026-04-18 T-2 / C2.
bindgen = "0.72"
# Compiles the tiny `blog_shim.c` helper that wraps OBS's variadic
# `blog(...)` function behind a fixed-arity C entry point we can call
# from Rust. Required to surface plugin diagnostic messages in OBS's
# own log pane (Help → Log Files → View Current Log) rather than only
# in the captured stderr that most users never see.
cc = "1"
