[package]
name = "reco-tensorrt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native TensorRT inference for reco: YOLO detection on NVIDIA GPUs without ONNX Runtime"
links = "tensorrt_wrapper"

[dependencies]
reco-core = { path = "../reco-core" }
log = "0.4"
tracing = { workspace = true, optional = true }

[features]
profiling = ["reco-core/profiling", "dep:tracing"]

[build-dependencies]
cc = "1"
